// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceList /> snapshots cited and uncited list populated 1`] = `
<div>
  <t
    noPanel={false}
    position={
      Object {
        "left": 50,
        "top": 40,
      }
    }
  />
  <DialogRouter
    currentDialog={""}
    onSubmit={[Function]}
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "links": "always",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {
            "1": Object {
              "id": "3",
              "title": "citation 3",
            },
          },
          "byIndex": Array [],
        },
        "locale": "en_US",
      }
    }
  />
  <div
    className="panel"
  >
    <Button
      disabled={true}
      flat={true}
      icon="migrate"
      label="Insert selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Insert selected references",
        }
      }
      type="button"
    />
    <Button
      data-dialog="ADD"
      disabled={false}
      flat={true}
      icon="plus"
      label="Add reference"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Add reference",
        }
      }
      type="button"
    />
    <Button
      disabled={true}
      flat={true}
      icon="minus"
      label="Remove selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Remove selected references",
        }
      }
      type="button"
    />
    <Button
      flat={true}
      icon="admin-post"
      label="Pin reference list"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Pin reference list",
        }
      }
      type="button"
    />
    <Button
      aria-expanded={false}
      aria-haspopup={true}
      flat={true}
      icon="menu"
      label="Toggle menu"
      onClick={[Function]}
      type="button"
    />
  </div>
  <Menu
    cslStyle={"american-medical-association"}
    isOpen={false}
    itemsSelected={false}
    onSubmit={[Function]}
  />
  <ItemList
    CSL={
      Object {
        "1": Object {
          "id": "3",
          "title": "citation 3",
        },
      }
    }
    id="uncited"
    items={
      Array [
        Object {
          "id": "3",
          "title": "citation 3",
        },
      ]
    }
    onEditReference={[Function]}
    selectedItems={Array []}
    ui={
      Object {
        "cited": Object {
          "isOpen": true,
          "maxHeight": "400px",
        },
        "loading": false,
        "menuOpen": false,
        "pinned": false,
        "uncited": Object {
          "isOpen": false,
          "maxHeight": "400px",
        },
      }
    }
  >
    Uncited Items
  </ItemList>
  <style
    jsx={true}
  >
    
                    .panel {
                        display: flex;
                        width: 100%;
                        padding: 8px 0;
                        background: #f5f5f5;
                        box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        justify-content: space-around;
                    }
                
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots cited and uncited list populated 2`] = `
<div>
  <t
    noPanel={false}
    position={
      Object {
        "left": 50,
        "top": 40,
      }
    }
  />
  <DialogRouter
    currentDialog={""}
    onSubmit={[Function]}
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "links": "always",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {
            "1": Object {
              "id": "3",
              "title": "citation 3",
            },
          },
          "byIndex": Array [
            Object {
              "citationItems": Array [
                Object {
                  "id": "1",
                  "item": Object {
                    "id": "1",
                    "title": "citation 1",
                  },
                },
                Object {
                  "id": "2",
                  "item": Object {
                    "id": "2",
                    "title": "citation 2",
                  },
                },
              ],
              "properties": Object {
                "index": 0,
              },
            },
          ],
        },
        "locale": "en_US",
      }
    }
  />
  <div
    className="panel"
  >
    <Button
      disabled={true}
      flat={true}
      icon="migrate"
      label="Insert selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Insert selected references",
        }
      }
      type="button"
    />
    <Button
      data-dialog="ADD"
      disabled={false}
      flat={true}
      icon="plus"
      label="Add reference"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Add reference",
        }
      }
      type="button"
    />
    <Button
      disabled={true}
      flat={true}
      icon="minus"
      label="Remove selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Remove selected references",
        }
      }
      type="button"
    />
    <Button
      flat={true}
      icon="admin-post"
      label="Pin reference list"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Pin reference list",
        }
      }
      type="button"
    />
    <Button
      aria-expanded={false}
      aria-haspopup={true}
      flat={true}
      icon="menu"
      label="Toggle menu"
      onClick={[Function]}
      type="button"
    />
  </div>
  <Menu
    cslStyle={"american-medical-association"}
    isOpen={false}
    itemsSelected={false}
    onSubmit={[Function]}
  />
  <ItemList
    CSL={
      Object {
        "1": Object {
          "id": "3",
          "title": "citation 3",
        },
      }
    }
    id="cited"
    items={
      Array [
        Object {
          "id": "3",
          "title": "citation 3",
        },
        undefined,
      ]
    }
    onEditReference={[Function]}
    selectedItems={Array []}
    ui={
      Object {
        "cited": Object {
          "isOpen": true,
          "maxHeight": "400px",
        },
        "loading": false,
        "menuOpen": false,
        "pinned": false,
        "uncited": Object {
          "isOpen": false,
          "maxHeight": "400px",
        },
      }
    }
  >
    Cited Items
  </ItemList>
  <style
    jsx={true}
  >
    
                    .panel {
                        display: flex;
                        width: 100%;
                        padding: 8px 0;
                        background: #f5f5f5;
                        box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        justify-content: space-around;
                    }
                
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots initial mount with empty state 1`] = `
<div>
  <Spinner
    bgColor="#f5f5f5"
    height="52px"
    size="40px"
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "links": "always",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {},
          "byIndex": Array [],
        },
        "locale": "en_US",
      }
    }
  />
  <style
    jsx={true}
  >
    
                        div {
                            box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        }
                    
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots initial mount with empty state 2`] = `
<div>
  <t
    noPanel={false}
    position={
      Object {
        "left": 50,
        "top": 40,
      }
    }
  />
  <DialogRouter
    currentDialog={""}
    onSubmit={[Function]}
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "links": "always",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {},
          "byIndex": Array [],
        },
        "locale": "en_US",
      }
    }
  />
  <div
    className="panel"
  >
    <Button
      disabled={true}
      flat={true}
      icon="migrate"
      label="Insert selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Insert selected references",
        }
      }
      type="button"
    />
    <Button
      data-dialog="ADD"
      disabled={false}
      flat={true}
      icon="plus"
      label="Add reference"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Add reference",
        }
      }
      type="button"
    />
    <Button
      disabled={true}
      flat={true}
      icon="minus"
      label="Remove selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Remove selected references",
        }
      }
      type="button"
    />
    <Button
      flat={true}
      icon="admin-post"
      label="Pin reference list"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Pin reference list",
        }
      }
      type="button"
    />
    <Button
      aria-expanded={false}
      aria-haspopup={true}
      flat={true}
      icon="menu"
      label="Toggle menu"
      onClick={[Function]}
      type="button"
    />
  </div>
  <Menu
    cslStyle={"american-medical-association"}
    isOpen={false}
    itemsSelected={false}
    onSubmit={[Function]}
  />
  <style
    jsx={true}
  >
    
                    .panel {
                        display: flex;
                        width: 100%;
                        padding: 8px 0;
                        background: #f5f5f5;
                        box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        justify-content: space-around;
                    }
                
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots menu toggled open 1`] = `
<div>
  <t
    noPanel={false}
    position={
      Object {
        "left": 50,
        "top": 40,
      }
    }
  />
  <DialogRouter
    currentDialog={""}
    onSubmit={[Function]}
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "links": "always",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {},
          "byIndex": Array [],
        },
        "locale": "en_US",
      }
    }
  />
  <div
    className="panel"
  >
    <Button
      disabled={true}
      flat={true}
      icon="migrate"
      label="Insert selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Insert selected references",
        }
      }
      type="button"
    />
    <Button
      data-dialog="ADD"
      disabled={false}
      flat={true}
      icon="plus"
      label="Add reference"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Add reference",
        }
      }
      type="button"
    />
    <Button
      disabled={true}
      flat={true}
      icon="minus"
      label="Remove selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Remove selected references",
        }
      }
      type="button"
    />
    <Button
      flat={true}
      icon="admin-post"
      label="Pin reference list"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Pin reference list",
        }
      }
      type="button"
    />
    <Button
      aria-expanded={true}
      aria-haspopup={true}
      flat={true}
      icon="no-alt"
      label="Toggle menu"
      onClick={[Function]}
      type="button"
    />
  </div>
  <Menu
    cslStyle={"american-medical-association"}
    isOpen={true}
    itemsSelected={false}
    onSubmit={[Function]}
  />
  <style
    jsx={true}
  >
    
                    .panel {
                        display: flex;
                        width: 100%;
                        padding: 8px 0;
                        background: #f5f5f5;
                        box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        justify-content: space-around;
                    }
                
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots pinned state toggled 1`] = `
<div>
  <t
    noPanel={false}
    position={
      Object {
        "left": 50,
        "top": 40,
      }
    }
  />
  <DialogRouter
    currentDialog={""}
    onSubmit={[Function]}
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "links": "always",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {},
          "byIndex": Array [],
        },
        "locale": "en_US",
      }
    }
  />
  <div
    className="panel"
  >
    <Button
      disabled={true}
      flat={true}
      icon="migrate"
      label="Insert selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Insert selected references",
        }
      }
      type="button"
    />
    <Button
      data-dialog="ADD"
      disabled={false}
      flat={true}
      icon="plus"
      label="Add reference"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Add reference",
        }
      }
      type="button"
    />
    <Button
      disabled={true}
      flat={true}
      icon="minus"
      label="Remove selected references"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Remove selected references",
        }
      }
      type="button"
    />
    <Button
      flat={true}
      icon="sticky"
      label="Pin reference list"
      onClick={[Function]}
      tooltip={
        Object {
          "position": "bottom",
          "text": "Pin reference list",
        }
      }
      type="button"
    />
    <Button
      aria-expanded={false}
      aria-haspopup={true}
      flat={true}
      icon="menu"
      label="Toggle menu"
      onClick={[Function]}
      type="button"
    />
  </div>
  <Menu
    cslStyle={"american-medical-association"}
    isOpen={false}
    itemsSelected={false}
    onSubmit={[Function]}
  />
  <style
    jsx={true}
  >
    
                    .panel {
                        display: flex;
                        width: 100%;
                        padding: 8px 0;
                        background: #f5f5f5;
                        box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        justify-content: space-around;
                    }
                
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots should match StorageField snapshot 1`] = `
<input
  name="abt-reflist-state"
  type="hidden"
  value="{\\"CSL\\":{},\\"cache\\":{\\"locale\\":\\"en_US\\",\\"style\\":\\"american-medical-association\\"},\\"citationByIndex\\":[]}"
/>
`;
